--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
             <title>Chat App</title>
             <link rel="icon" href="/img/favicon.png">
             <!--<link rel="stylesheet" href="/css/styles.min.css">-->
+            <meta name="viewport" content="width=device-width, initial-scale=1" />
             <link rel="stylesheet" href="/css/styles.css">
         </head>
 
         <body>
             <div class="centered-form">
+
+                
                 <div class="centered-form__box">
                     <h2>Join Chat Room</h2>
                     <form action="/chat.html">
